# Dsl

./: .cproject  .project  CMakeLists.txt  README.md
code/include/l0-infra/base/: Assertions.h  BaseMacro.h  BaseTypes.h  ConstExpr.h  NullPtr.h  Status.h
code/include/l0-infra/gof/: State.h
code/include/l0-infra/mem/: AutoMsg.h  LinkedAllocator.h  Maybe.h  MsgAllocator.h  PlainTransData.h  ScopeExit.h  SmartPtr.h  TransData.h
code/include/l0-infra/utils/: DefaultConstructor.h  InstKeyHelper.h  InstanceIdHelper.h  LambdaTraits.h
code/include/l1-domain/: CellState.h
code/include/l1-domain/errorcode/: CommonError.h
code/include/l2-context/action/: CellSetupReqAction.h
code/include/l3-trans/: AddTrans.h  MccContext.h  TransactionHelper.h  testTrans.h
code/include/l3-trans/frag/: Trans.h
code/include/l4-sched/: TransMachine.h  TransStatusIF.h
code/include/l4-sched/event/: SchedEventDef.h  WaitReqMsg.h
code/include/l4-sched/state/: IdleState.h  SchedState.h  (+2 more)
code/src/: MccInst.cpp
code/src/l4-sched/: TransMachine.cpp
ftest/: FtMccSetup.cpp  ftest_main.cpp
include/l0-infra/base/: Default.h  Keywords.h  StaticAssert.h  Status.h
include/l0-infra/gof/: Singleton.h
include/l0-infra/mem/: MsgNewOperator.h  ObjectAllocator.h  Placement.h  SharedObject.h  StructObject.h  StructWrapper.h
include/l0-infra/trans-dsl/: TransactionDSL.h  TslStatus.h  tsl.h
include/l0-infra/utils/: FunctionTraits.h
include/l3-trans/: AddTrans.h  testTrans.h
src/: main.cpp
src/l0-infra/event/: CMakeLists.txt
src/l0-infra/mem/: MsgAllocator.cpp  SharedObject.cpp
(+226 files in other folders)
